Update Alien Ruler handling
adjust thresholds so enemy numbers are properly consistent.
Add some new pods for lower str troop columns since they have lower ruler pod sizes.
Stop submitting a gamestate that references a nonexistant mission by redoing a helper

--- a/LongWarOfTheChosen/Config/XComEncounters.ini
+++ b/LongWarOfTheChosen/Config/XComEncounters.ini
@@ -328,6 +328,42 @@
 						ForceSpawnTemplateNames[1]="AdvTrooperM3", \\
 						ForceSpawnTemplateNames[2]="LWDroneM2")
 
+
++ConfigurableEncounters=(EncounterID="ADVx6_Weak_Rocketteam_LW", \\
+						MaxSpawnCount=6, \\
+						MinRequiredForceLevel=1, \\
+						MaxRequiredForceLevel=7, \\
+						ForceSpawnTemplateNames[0]="AdvTrooperM1", \\
+						ForceSpawnTemplateNames[1]="AdvGunnerM1", \\
+						ForceSpawnTemplateNames[2]="AdvGrenadierM1", \\
+						ForceSpawnTemplateNames[3]="AdvSentryM1", \\
+						ForceSpawnTemplateNames[4]="AdvRocketeerM1", \\
+						ForceSpawnTemplateNames[5]="LWDroneM1")
+
++ConfigurableEncounters=(EncounterID="ADVx6_Standard_Rocketteam_LW", \\
+						MaxSpawnCount=6, \\
+						MinRequiredForceLevel=8, \\
+						MaxRequiredForceLevel=13, \\
+						ForceSpawnTemplateNames[0]="AdvSergeantM1", \\
+						ForceSpawnTemplateNames[1]="AdvGunnerM2", \\
+						ForceSpawnTemplateNames[2]="AdvGrenadierM2", \\
+						ForceSpawnTemplateNames[3]="AdvSentryM2", \\
+						ForceSpawnTemplateNames[4]="AdvRocketeerM2", \\
+						ForceSpawnTemplateNames[5]="LWDroneM2")
+
++ConfigurableEncounters=(EncounterID="ADVx6_Strong_Rocketteam_LW", \\
+						MaxSpawnCount=6, \\
+						MinRequiredForceLevel=14, \\
+						MaxRequiredForceLevel=20, \\
+						ForceSpawnTemplateNames[0]="AdvSergeantM2", \\
+						ForceSpawnTemplateNames[1]="AdvGunnerM3", \\
+						ForceSpawnTemplateNames[2]="AdvGrenadierM3", \\
+						ForceSpawnTemplateNames[3]="AdvSentryM3", \\
+						ForceSpawnTemplateNames[4]="AdvRocketeerM3", \\
+						ForceSpawnTemplateNames[5]="LWDroneM2")
+
+
+
 +ConfigurableEncounters=(EncounterID="ADVx8_Early_Squad_LW", \\
 						MaxSpawnCount=8, \\
 						MinRequiredForceLevel=1, \\
@@ -382,13 +418,13 @@
 						ForceSpawnTemplateNames[0]="AdvGeneralM2_LW")
 
 +ConfigurableEncounters=(EncounterID="Muton_Warband_Too_Early", \\
-						MaxSpawnCount = 5, \\
+						MaxSpawnCount = 6, \\
 						MinRequiredForceLevel = 1, \\
 						MaxRequiredForceLevel = 6, \\
 						ForceSpawnTemplateNames[0]="Muton")
 
 +ConfigurableEncounters=(EncounterID="Muton_Warband_Early_PROTECTED", \\
-						MaxSpawnCount = 4, \\
+						MaxSpawnCount = 6, \\
 						MinRequiredForceLevel = 7, \\
 						MaxRequiredForceLevel = 9, \\
 						ForceSpawnTemplateNames[0]="Muton", \\
@@ -397,14 +433,15 @@
 						ForceSpawnTemplateNames[3]="Muton")
 
 +ConfigurableEncounters=(EncounterID="Muton_Warband_Mid_PROTECTED", \\
-						MaxSpawnCount = 5, \\
+						MaxSpawnCount = 6, \\
 						MinRequiredForceLevel = 10, \\
 						MaxRequiredForceLevel = 14, \\
 						ForceSpawnTemplateNames[0]="MutonM2_LW", \\
 						ForceSpawnTemplateNames[1]="Berserker", \\
 						ForceSpawnTemplateNames[2]="Muton", \\
 						ForceSpawnTemplateNames[3]="Muton", \\
-						ForceSpawnTemplateNames[4]="Muton")
+						ForceSpawnTemplateNames[4]="Muton", \\
+						ForceSpawnTemplateNames[5]="Muton")
 
 +ConfigurableEncounters=(EncounterID="Muton_Warband_Late_PROTECTED", \\
 						MaxSpawnCount = 6, \\
@@ -2144,6 +2181,12 @@
 					EncounterIDs[0]=(EncounterID="ADVx3_Early_RPGTeam_LW"), \\
 					EncounterIDs[1]=(EncounterID="ADVx3_Mid_RPGTeam_LW"), \\
 					EncounterIDs[2]=(EncounterID="ADVx3_Late_RPGTeam_LW") \\
+				)
+
++EncounterBuckets=(EncounterBucketID="ADVENTRocketTeamBucketx6_LW", \\
+					EncounterIDs[0]=(EncounterID="ADVx6_Weak_Rocketteam_LW"), \\
+					EncounterIDs[1]=(EncounterID="ADVx6_Standard_Rocketteam_LW"), \\
+					EncounterIDs[2]=(EncounterID="ADVx6_Strong_Rocketteam_LW") \\
 				)
 
 +EncounterBuckets=(EncounterBucketID="ADVENTSquadBucket_LW", \\
