--- a/LongWarOfTheChosen/Config/XComSchedules.ini
+++ b/LongWarOfTheChosen/Config/XComSchedules.ini
@@ -7936,6 +7936,8 @@
 				  						  EncounterZoneDepthOverride=48.0, EncounterZoneOffsetFromLOP=0.0, IncludeTacticalTag="DarkEvent_InfiltratorChryssalid") \\
 				  )
 
+; 12
+
 +MissionSchedules=(ScheduleID="Supply_D3_1_LW", \\
 				  MinRequiredAlertLevel=3, MaxRequiredAlertLevel=3, \\
 				  IdealXComSpawnDistance=80, \\
@@ -7969,6 +7971,7 @@
 				  						  EncounterZoneDepthOverride=48.0, EncounterZoneOffsetFromLOP=10.0, IncludeTacticalTag="DarkEvent_InfiltratorChryssalid") \\
 				  )
 
+; 14-15
 +MissionSchedules=(ScheduleID="Supply_D4_1_LW", \\
 				  MinRequiredAlertLevel=4, MaxRequiredAlertLevel=4, \\
 				  IdealXComSpawnDistance=80, \\
@@ -8018,6 +8021,8 @@
 				  PrePlacedEncounters[5]=(EncounterID="DKVx1_Chryssalid", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=10.0, \\
 				  						  EncounterZoneDepthOverride=48.0, EncounterZoneOffsetFromLOP=10.0, IncludeTacticalTag="DarkEvent_InfiltratorChryssalid") \\
 				  )
+
+; 16-17
 
 +MissionSchedules=(ScheduleID="Supply_D5_1_LW", \\
 				  MinRequiredAlertLevel=5, MaxRequiredAlertLevel=5, \\
@@ -8069,6 +8074,8 @@
 											EncounterZoneDepthOverride=48.0, EncounterZoneOffsetFromLOP=10.0, IncludeTacticalTag="DarkEvent_InfiltratorChryssalid") \\
 				  )
 
+; 19-20
+
 +MissionSchedules=(ScheduleID="Supply_D6_1_LW", \\
 				  MinRequiredAlertLevel=6, MaxRequiredAlertLevel=6, \\
 				  IdealXComSpawnDistance=80, \\
@@ -8113,12 +8120,14 @@
 					PrePlacedEncounters[0]=(EncounterID="SUPPLY_COMMAND_BUCKETx5_LW",	EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=8.0), \\
 					PrePlacedEncounters[1]=(EncounterID="OPNx5_Standard_LW",			EncounterZoneOffsetAlongLOP=19.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[2]=(EncounterID="ADVx3_Standard_LW",			EncounterZoneOffsetAlongLOP=24.0, EncounterZoneWidth=45.0), \\
-					PrePlacedEncounters[3]=(EncounterID="ALNx7_Bucket_Standard_LW",		EncounterZoneOffsetAlongLOP=38.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[3]=(EncounterID="ALNx6_Bucket_Standard_LW",		EncounterZoneOffsetAlongLOP=38.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[4]=(EncounterID="DKVx1_Chryssalid",	EncounterZoneOffsetAlongLOP=0.0,EncounterZoneWidth=10.0, \\
 											EncounterZoneDepthOverride=48.0, EncounterZoneOffsetFromLOP=0.0, IncludeTacticalTag="DarkEvent_InfiltratorChryssalid"), \\
 					PrePlacedEncounters[5]=(EncounterID="DKVx1_Chryssalid", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=10.0, \\
 											EncounterZoneDepthOverride=48.0, EncounterZoneOffsetFromLOP=10.0, IncludeTacticalTag="DarkEvent_InfiltratorChryssalid") \\
 				  )
+
+; 21
 
 +MissionSchedules=(ScheduleID="Supply_D7_1_LW", \\
 					MinRequiredAlertLevel=7, MaxRequiredAlertLevel=7, \\
@@ -8190,6 +8199,8 @@
 				  						  EncounterZoneDepthOverride=48.0, EncounterZoneOffsetFromLOP=10.0, IncludeTacticalTag="DarkEvent_InfiltratorChryssalid") \\
 				  )
 
+; 22
+
 +MissionSchedules=(ScheduleID="Supply_D8_1_LW", \\
 				  MinRequiredAlertLevel=8, MaxRequiredAlertLevel=8, \\
 				  IdealXComSpawnDistance=80, \\
@@ -8242,6 +8253,8 @@
 				  						  EncounterZoneDepthOverride=48.0, EncounterZoneOffsetFromLOP=10.0, IncludeTacticalTag="DarkEvent_InfiltratorChryssalid") \\
 				  )
 
+; 23
+
 +MissionSchedules=(ScheduleID="Supply_D9_1_LW", \\
 				  MinRequiredAlertLevel=9, MaxRequiredAlertLevel=9, \\
 				  IdealXComSpawnDistance=80, \\
@@ -8275,6 +8288,8 @@
 				  PrePlacedEncounters[5]=(EncounterID="DKVx1_Chryssalid", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=10.0, \\
 				  						  EncounterZoneDepthOverride=48.0, EncounterZoneOffsetFromLOP=10.0, IncludeTacticalTag="DarkEvent_InfiltratorChryssalid") \\
 				  )
+
+; 25
 
 +MissionSchedules=(ScheduleID="Supply_D10_1_LW", \\
 				  MinRequiredAlertLevel=10, MaxRequiredAlertLevel=10, \\
@@ -13646,6 +13661,7 @@
 
 ; Troop Column Schedule
 
+; 10 (gatecrasher)
 +MissionSchedules=(ScheduleID="Troop_Column_D1_LW", \\
 					MinRequiredAlertLevel=0, MaxRequiredAlertLevel=1, \\
 					IdealXComSpawnDistance=48, \\
@@ -13658,7 +13674,7 @@
 					PrePlacedEncounters[2]=(EncounterID="LIST_OPNx2_Special_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=45.0) \\
 					)
 
-; 10
+; 11
 +MissionSchedules=(ScheduleID="Troop_Column_D2_LW", \\
 					MinRequiredAlertLevel=2, MaxRequiredAlertLevel=2, \\
 					IdealXComSpawnDistance=48, \\
@@ -13666,9 +13682,9 @@
 					EncounterZonePatrolDepth=22.0, \\
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
-					PrePlacedEncounters[0]=(EncounterID="ADVENTFireteamBucket_LW", EncounterZoneOffsetAlongLOP=3.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[0]=(EncounterID="ADVENTRocketTeamBucketx6_LW", EncounterZoneOffsetAlongLOP=3.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[1]=(EncounterID="ADVENTFireteamBucket_LW", EncounterZoneOffsetAlongLOP=10.0, EncounterZoneWidth=15.0), \\
-					PrePlacedEncounters[2]=(EncounterID="LIST_OPNx3_Special_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[2]=(EncounterID="LIST_OPNx2_Special_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=45.0), \\
 					)
 
 +MissionSchedules=(ScheduleID="Troop_Column_D2_2_LW", \\
@@ -13678,12 +13694,12 @@
 					EncounterZonePatrolDepth=22.0, \\
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
-					PrePlacedEncounters[0]=(EncounterID="ADVENTFireteamBucket_LW", EncounterZoneOffsetAlongLOP=3.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[0]=(EncounterID="ADVENTRocketTeamBucketx6_LW", EncounterZoneOffsetAlongLOP=3.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[1]=(EncounterID="ADVENTRPGTeamBucket_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=15.0), \\
-					PrePlacedEncounters[2]=(EncounterID="LIST_OPNx4_Special_LW", EncounterZoneOffsetAlongLOP=10.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[2]=(EncounterID="LIST_OPNx2_Special_LW", EncounterZoneOffsetAlongLOP=10.0, EncounterZoneWidth=45.0), \\
 					)
 
-;12
+; 12
 +MissionSchedules=(ScheduleID="Troop_Column_D3_LW", \\
 					MinRequiredAlertLevel=3, MaxRequiredAlertLevel=3, \\
 					IdealXComSpawnDistance=48, \\
@@ -13691,9 +13707,9 @@
 					EncounterZonePatrolDepth=22.0, \\
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
-					PrePlacedEncounters[0]=(EncounterID="ADVENTSquadBucket_LW", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[0]=(EncounterID="TROOP_ALIEN_BUCKETx6_LW", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[1]=(EncounterID="LIST_OPNx2_Special_LW", EncounterZoneOffsetAlongLOP=10.0, EncounterZoneWidth=24.0), \\
-					PrePlacedEncounters[2]=(EncounterID="OPNx2_Standard_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=45.0) \\
+					PrePlacedEncounters[2]=(EncounterID="OPNx4_Standard_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=45.0) \\
 					)
 
 +MissionSchedules=(ScheduleID="Troop_Column_D3_2_LW", \\
@@ -13704,7 +13720,8 @@
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
 					PrePlacedEncounters[0]=(EncounterID="ADVENTSquadBucket_LW", EncounterZoneOffsetAlongLOP=-4.0, EncounterZoneWidth=45.0), \\
-					PrePlacedEncounters[1]=(EncounterID="LIST_BOSSx4_Standard", EncounterZoneOffsetAlongLOP=8.0, EncounterZoneWidth=24.0), \\
+					PrePlacedEncounters[1]=(EncounterID="LIST_BOSSx2_Standard", EncounterZoneOffsetAlongLOP=8.0, EncounterZoneWidth=24.0), \\
+					PrePlacedEncounters[2]=(EncounterID="ADVx2_Standard_LW", EncounterZoneOffsetAlongLOP=15.0, EncounterZoneWidth=24.0), \\
 					)
 
 ; 14
@@ -13732,7 +13749,7 @@
 					PrePlacedEncounters[2]=(EncounterID="OPNx4_Standard_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=45.0) \\
 					)
 
-; 17
+; 17-18
 +MissionSchedules=(ScheduleID="Troop_Column_D5_LW", \\
 					MinRequiredAlertLevel=5, MaxRequiredAlertLevel=5, \\
 					IdealXComSpawnDistance=48, \\
@@ -13810,7 +13827,7 @@
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
 					PrePlacedEncounters[0]=(EncounterID="OPNx6_Standard_LW",		EncounterZoneOffsetAlongLOP=4.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[1]=(EncounterID="LIST_BOSSx4_Standard",		EncounterZoneOffsetAlongLOP=10.0, EncounterZoneWidth=24.0), \\
-					PrePlacedEncounters[2]=(EncounterID="OPNx6_Standard_LW",		EncounterZoneOffsetAlongLOP=-7.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[2]=(EncounterID="TROOP_ALIEN_BUCKETx6_LW",		EncounterZoneOffsetAlongLOP=-7.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[3]=(EncounterID="MutonBucket_LW",			EncounterZoneOffsetAlongLOP=-14.0, EncounterZoneWidth=45.0) \\
 					)
 
@@ -13855,7 +13872,7 @@
 					PrePlacedEncounters[0]=(EncounterID="ADVENTSquadBucket_LW", EncounterZoneOffsetAlongLOP=3.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[1]=(EncounterID="LIST_BOSSx4_Standard", EncounterZoneOffsetAlongLOP=-10.0, EncounterZoneWidth=24.0), \\
 					PrePlacedEncounters[2]=(EncounterID="ADVENTFireteamBucket_LW", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=45.0), \\
-					PrePlacedEncounters[3]=(EncounterID="OPNx5_Standard_LW", EncounterZoneOffsetAlongLOP=-20.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[3]=(EncounterID="OPNx4_Standard_LW", EncounterZoneOffsetAlongLOP=-20.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[4]=(EncounterID="TROOP_ALIEN_BUCKETx6_LW", EncounterZoneOffsetAlongLOP=10.0, EncounterZoneWidth=45.0) \\
 					)
 
@@ -13869,7 +13886,7 @@
 					PrePlacedEncounters[0]=(EncounterID="OPNx7_Standard_LW", EncounterZoneOffsetAlongLOP=3.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[1]=(EncounterID="LIST_BOSSx4_Standard", EncounterZoneOffsetAlongLOP=-10.0, EncounterZoneWidth=24.0), \\
 					PrePlacedEncounters[2]=(EncounterID="OPNx5_Standard_LW", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=45.0), \\
-					PrePlacedEncounters[3]=(EncounterID="OPNx5_Standard_LW", EncounterZoneOffsetAlongLOP=-20.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[3]=(EncounterID="OPNx4_Standard_LW", EncounterZoneOffsetAlongLOP=-20.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[4]=(EncounterID="MutonBucket_LW", EncounterZoneOffsetAlongLOP=10.0, EncounterZoneWidth=45.0) \\
 					)
 
@@ -15990,8 +16007,8 @@
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
 					PrePlacedEncounters[0]=(EncounterID="ADVENTLancerteamBucket_LW", EncounterZoneOffsetAlongLOP=3.0, EncounterZoneWidth=45.0), \\
-					PrePlacedEncounters[1]=(EncounterID="OPNx4_Standard_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=15.0), \\
-					PrePlacedEncounters[2]=(EncounterID="LIST_OPNx4_Special_LW", EncounterZoneOffsetAlongLOP=10.0, EncounterZoneWidth=45.0), \\
+					PrePlacedEncounters[1]=(EncounterID="OPNx6_Standard_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=15.0), \\
+					PrePlacedEncounters[2]=(EncounterID="LIST_OPNx2_Special_LW", EncounterZoneOffsetAlongLOP=10.0, EncounterZoneWidth=45.0), \\
 					)
 
 ;12
@@ -16015,7 +16032,8 @@
 					DefaultEncounterLeaderSpawnList="DefaultLeaders_LW", \\
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
 					PrePlacedEncounters[0]=(EncounterID="ADVENTSquadBucket_LW", EncounterZoneOffsetAlongLOP=-4.0, EncounterZoneWidth=45.0), \\
-					PrePlacedEncounters[1]=(EncounterID="LIST_BOSSx4_Standard", EncounterZoneOffsetAlongLOP=8.0, EncounterZoneWidth=24.0), \\
+					PrePlacedEncounters[1]=(EncounterID="LIST_BOSSx2_Standard", EncounterZoneOffsetAlongLOP=8.0, EncounterZoneWidth=24.0), \\
+					PrePlacedEncounters[2]=(EncounterID="OPNx4_Standard_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=45.0) \\
 					)
 
 ; 14
@@ -16040,7 +16058,7 @@
 					DefaultEncounterFollowerSpawnList="DefaultFollowers_LW", \\
 					PrePlacedEncounters[0]=(EncounterID="TROOP_ALIEN_BUCKETx6_LW", EncounterZoneOffsetAlongLOP=0.0, EncounterZoneWidth=45.0), \\
 					PrePlacedEncounters[1]=(EncounterID="LIST_OPNx4_Special_LW", EncounterZoneOffsetAlongLOP=7.0, EncounterZoneWidth=24.0), \\
-					PrePlacedEncounters[2]=(EncounterID="OPNx4_Standard_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=45.0) \\
+					PrePlacedEncounters[2]=(EncounterID="OPNx6_Standard_LW", EncounterZoneOffsetAlongLOP=-15.0, EncounterZoneWidth=45.0) \\
 					)
 
 +MissionSchedules=(ScheduleID="COP_Supply_D1_1_LW", \\
