new UFO/Facility map from EMM that was previously unfinished

--- a/LongWarOfTheChosen/Config/XComPlots.ini
+++ b/LongWarOfTheChosen/Config/XComPlots.ini
@@ -439,3 +439,8 @@
 +arrPlots=(MapName="plot_TWN_LgObj_WarehouseParking_EMM_01", strType="SmallTown", FloorCount=4, \\
 	ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", \\
 	ObjectiveTags[0]="GOps_Vehicle", ObjectiveTags[1]="AdventCapable", ObjectiveTags[2]="GuerillaOps")
+
+
++arrPlots=(MapName="plot_WLD_LgObj_WeighStation_EMM_01", strType="Wilderness", \\
+    ValidBiomes[0]="Temperate", ValidBiomes[1]="Arid", ValidBiomes[2]="Tundra", ValidBiomes[3]="Xenoform", \\
+    ObjectiveTags[0]="SecureUFO", ObjectiveTags[1]="Sabotage", FloorCount=4)
