--- a/LongWarOfTheChosen/Config/XComParcels.ini
+++ b/LongWarOfTheChosen/Config/XComParcels.ini
@@ -296,3 +296,9 @@
 	ObjectiveTags[0]="Recover", ObjectiveTags[1]="Hack", ObjectiveTags[2]="ProtectDevice", \\
 	ObjectiveTags[3]="DestroyRelay", ObjectiveTags[4]="Civilian", ObjectiveTags[5]="NeutralizeCommander", \\
 	ObjectiveTags[6]="SupplyExtraction", bAllowNonObjectiveOverride=true)
+
+; new EMM parcel
+
++arrAllParcelDefinitions=(MapName="md_WeighStation_01", eSize=eParcelSizeType_Medium, \\
+     arrZoneTypes[0]="wstn", arrPlotTypes[0]=(strPlotType="Wilderness"), \\
+     bAllowNonObjectiveOverride=true)
