Import the existing code from consumable resistance orders

--- a/LongWarOfTheChosen/Config/XComGameData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData.ini
@@ -1205,6 +1205,267 @@ Strength=99
 [ResCard_PopularSupportI X2StrategyCardTemplate]
 Strength=99
 
+[ResCard_FlashpointForGrenadiers X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm1"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_QuidProQuo X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm1"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_InformationWar X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm1"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_DesperateReserves_LW X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm2"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_MeatMarket X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm1"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_ShadyScavengers_LW X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm1"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_ExperimentalExperimentation_LW X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm1"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_ModularConstruction X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm1"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_MultitaskingForGremlins X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm2"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_Vulture X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm2"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_CombatDrugsForMedikit X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm2"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_SolShells X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm2"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_Mindtaker X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm2"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_BasiliskDoctrine_LW X2StrategyCardTemplate]
+Strength=3
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm3"
+AssociatedEntity=Faction_Skirmishers
+
+[ResCard_CouncilBounties X2StrategyCardTemplate]
+Strength=3
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Skirm3"
+AssociatedEntity=Faction_Skirmishers
+
+;Reaper
+[ResCard_HeavyEquipment X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper1"
+AssociatedEntity=Faction_Reapers
+
+[ResCard_LightningStrike X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper1"
+AssociatedEntity=Faction_Reapers
+
+[ResCard_RecruitingCenters X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper1"
+AssociatedEntity=Faction_Reapers
+
+[ResCard_EyeForValue X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper1"
+AssociatedEntity=Faction_Reapers
+
+[ResCard_GuardianAngels X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper1"
+AssociatedEntity=Faction_Reapers
+
+[ResCard_VeryIncandescentPersons X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper1"
+AssociatedEntity=Faction_Reapers
+
+[ResCard_LiveFireTraining_LW X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper2"
+AssociatedEntity=Faction_Reapers
+
+[ResCard_NeedlepointForSidearms X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper2"
+AssociatedEntity=Faction_Reapers
+
+
+[ResCard_BrazenRecruitment X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper2"
+AssociatedEntity=Faction_Reapers
+
+
+[ResCard_PracticalOccultism_LW X2StrategyCardTemplate]
+Strength=3
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper3"
+AssociatedEntity=Faction_Reapers
+
+[ResCard_ItsAboutSendingAMessage X2StrategyCardTemplate]
+Strength=3
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper3"
+AssociatedEntity=Faction_Reapers
+
+[ResCard_RescueFriendlyPolitician X2StrategyCardTemplate]
+Strength=3
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Reaper3"
+AssociatedEntity=Faction_Reapers
+
+;TEMPLAR
+
+[ResCard_BigDamnHeroes X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar1"
+AssociatedEntity=Faction_Templars
+
+[ResCard_StayWithMe X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar1"
+AssociatedEntity=Faction_Templars
+
+[ResCard_Secticide_LW X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar1"
+AssociatedEntity=Faction_Templars
+
+[ResCard_HigherZealotry_LW X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar1"
+AssociatedEntity=Faction_Templars
+
+[ResCard_EfficiencyManual_LW X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar1"
+AssociatedEntity=Faction_Templars
+
+[ResCard_GrndlPowerDeal X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar1"
+AssociatedEntity=Faction_Templars
+
+[ResCard_RadioFreeLily_LW X2StrategyCardTemplate]
+Strength=1
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar1"
+AssociatedEntity=Faction_Templars
+
+
+
+[ResCard_XenobiologicalFieldResearch_LW X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar2"
+AssociatedEntity=Faction_Templars
+
+
+[ResCard_ZealousDeployment_LW X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar2"
+AssociatedEntity=Faction_Templars
+
+[ResCard_NobleCause X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar2"
+
+[ResCard_GreaterResolve X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar2"
+
+[ResCard_GrantRookiesPermaHp_LW X2StrategyCardTemplate]
+Strength=2
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar2"
+AssociatedEntity=Faction_Templars
+
+[ResCard_BloodPillarForPsi X2StrategyCardTemplate]
+Strength=3
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar3"
+AssociatedEntity=Faction_Templars
+
+[ResCard_RemoteSuperchargers_LW X2StrategyCardTemplate]
+Strength=3
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar3"
+AssociatedEntity=Faction_Templars
+
+[ResCard_BrazenCollection X2StrategyCardTemplate]
+Strength=3
+;bContinentBonus=false
+ImagePath="img:///UILibrary_PolicyCards.BlankPolicyCards_Templar3"
+AssociatedEntity=Faction_Templars
+
+
+
+
 [XComGame.XComGameState_DarkEvent]
 
 StartingIntelCost[0]=5  ;Easy
