--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2403,6 +2403,30 @@ DISABLE_STARTING_REGION_CHECKS=false
 MIN_STARTING_REGION_LINKS=3
 MAX_STARTING_REGION_LINKS=4
 
+SHADY_SCAVENGERS_ALLOY_AMOUNT = 15
+SHADY_SCAVENGERS_ALLOY_COST = 35
+
+SHADY_SCAVENGERS_ELERIUM_AMOUNT = 15
+SHADY_SCAVENGERS_ELERIUM_COST = 35
+
+;Since we're making it in-house, it's probably better to add a whitelist for permament resistance orders instead of the other way around
++PERMAMENT_RESISTANCE_ORDERS=
+
+
+[LW_Overhaul.X2Rescard_AdditionalResCards_LW]
+
+EFFICIENCY_MANUAL_PCT_DISCOUNT = 25
+SUPERCHARGER_POWER_DRAIN = 4
+
+XENO_FIELD_RESEARCH_RESEARCH_BONUS = 30
+
+RADIO_FREE_LILY_COMMS_BONUS = 3
+
+;Default Work per hour rate is 5 apparently, so this is a 60% bonus
+EXPERIMENTAL_EXPERIMENTATION_WORK_BONUS = 3
+
+
+
 [LW_Overhaul.X2EventListener_Headquarters]
 CA_RISK_REDUCTION_PER_RANK[0]=12   ; Rookie
 CA_RISK_REDUCTION_PER_RANK[1]=10   ; Veteran
@@ -2768,3 +2792,6 @@ bLeftSquadButton = false
 +AlienRulerTags = "Ruler_ViperKingActive"
 +AlienRulerTags = "Ruler_BerserkerQueenActive"
 +AlienRulerTags = "Ruler_ArchonKingActive"
+
+[LW_Overhaul.X2StrategyElement_DefaultPointsOfInterests_LW]
+RESCARD_POI_MAX_CARDS_IN_HAND = 6
