--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -736,6 +736,14 @@ ANATOMY_ARMOR_PIERCE = 2
 
 PREPFORWAR_MELEE_DMG = 2
 
+ROOKIE_COMBAT_HP_BONUS = 2
+ROOKIE_COMBAT_AIM_BONUS = 5
+OBLITERATION_PCT_DAMAGE_BONUS = 100
+TAC_DEF_BONUS = 10
+ADRENALINE_SHIELD=1
+SECTICIDE_WILL_REDUCTION = -25
+SECTICIDE_PSIOFFENSE_REDUCTION =-50
+
 [LW_PerkPack_Integrated.X2Effect_HitandRun]
 +HNR_ABILITYNAMES=StandardShot
 +HNR_ABILITYNAMES=StandardShot_NoEnd
