Add a potential config for permament resistance orders

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2410,7 +2410,7 @@ SHADY_SCAVENGERS_ELERIUM_AMOUNT = 15
 SHADY_SCAVENGERS_ELERIUM_COST = 35
 
 ;Since we're making it in-house, it's probably better to add a whitelist for permament resistance orders instead of the other way around
-+PERMAMENT_RESISTANCE_ORDERS=
+;;+PERMAMENT_RESISTANCE_ORDERS=placeholder
 
 
 [LW_Overhaul.X2Rescard_AdditionalResCards_LW]
