Go through resistance orders again

--- a/LongWarOfTheChosen/Config/XComGameBoard.ini
+++ b/LongWarOfTheChosen/Config/XComGameBoard.ini
@@ -389,6 +389,7 @@ RewardScalar[3]=3.0 ;Impossible
 	Weight[2]=0, \\
 	Weight[3]=0)
 
+
 [POI_IncreaseIncome X2PointOfInterestTemplate]
 ; Count: 2
 !Weights=()
@@ -397,6 +398,24 @@ RewardScalar[3]=3.0 ;Impossible
 	Weight[1]=0, \\
 	Weight[2]=0, \\
 	Weight[3]=0)
+
+
+[POI_ResistanceCard X2PointOfInterestTemplate]
+RewardTypes=Reward_ResistanceCard_POI
+RewardScalar[0]=1.0 ;Easy
+RewardScalar[1]=1.0 ;Normal
+RewardScalar[2]=1.0 ;Classic
+RewardScalar[3]=1.0 ;Impossible
+MinRewardInstanceAmount[0]=1 ;Easy
+MinRewardInstanceAmount[1]=1 ;Normal
+MinRewardInstanceAmount[2]=1 ;Classic
+MinRewardInstanceAmount[3]=1 ;Impossible
+MaxRewardInstanceAmount[0]=1 ;Easy
+MaxRewardInstanceAmount[1]=1 ;Normal
+MaxRewardInstanceAmount[2]=1 ;Classic
+MaxRewardInstanceAmount[3]=1 ;Impossible
+Weights=(DaysActive=0,      Weight[0]=40,      Weight[1]=40,      Weight[2]=40,      Weight[3]=40)
+
 
 [XComGame.XComGameState_Skyranger]
 Acceleration=(X=0.075, Y=0.075, Z=10.0)
