--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -1741,11 +1741,11 @@ AutopsyAdventPsiWitchIntelCost=0
 ;+GTSUnlocksToRemove="VultureUnlock"
 
 ; GTS edits
-+GTSTable=(GTSProjectTemplateName="VengeanceUnlock",			SupplyCost=25,	RankRequired=0,		HideIfInsufficientRank=false,	UniqueClass="");
+;+GTSTable=(GTSProjectTemplateName="VengeanceUnlock",			SupplyCost=50,	RankRequired=0,		HideIfInsufficientRank=false,	UniqueClass="");
 +GTSTable=(GTSProjectTemplateName="WetWorkUnlock",				SupplyCost=75,	RankRequired=2,		HideIfInsufficientRank=false,	UniqueClass="");
-+GTSTable=(GTSProjectTemplateName="LightningStrikeUnlock",		SupplyCost=150,	RankRequired=3,		HideIfInsufficientRank=false,	UniqueClass="");
+; +GTSTable=(GTSProjectTemplateName="LightningStrikeUnlock",		SupplyCost=150,	RankRequired=3,		HideIfInsufficientRank=false,	UniqueClass="");
 ;+GTSTable=(GTSProjectTemplateName="VultureUnlock",				SupplyCost=150,	RankRequired=10,		HideIfInsufficientRank=true,	UniqueClass="");
-+GTSTable=(GTSProjectTemplateName="IntegratedWarfareUnlock",	SupplyCost=150,	RankRequired=5,		HideIfInsufficientRank=false,	UniqueClass="");
+; +GTSTable=(GTSProjectTemplateName="IntegratedWarfareUnlock",	SupplyCost=150,	RankRequired=5,		HideIfInsufficientRank=false,	UniqueClass="");
 +GTSTable=(GTSProjectTemplateName="StayWithMeUnlock",			SupplyCost=150,	RankRequired=6,		HideIfInsufficientRank=false,	UniqueClass="");
 +GTSTable=(GTSProjectTemplateName="Infiltration1Unlock",		SupplyCost=250,	RankRequired=0,		HideIfInsufficientRank=false,	UniqueClass="");
 +GTSTable=(GTSProjectTemplateName="Infiltration2Unlock",		SupplyCost=250,	RankRequired=0,		HideIfInsufficientRank=false,	UniqueClass="");
@@ -2404,13 +2404,173 @@ MIN_STARTING_REGION_LINKS=3
 MAX_STARTING_REGION_LINKS=4
 
 SHADY_SCAVENGERS_ALLOY_AMOUNT = 15
-SHADY_SCAVENGERS_ALLOY_COST = 35
+SHADY_SCAVENGERS_ALLOY_COST = 50
 
 SHADY_SCAVENGERS_ELERIUM_AMOUNT = 15
-SHADY_SCAVENGERS_ELERIUM_COST = 35
+SHADY_SCAVENGERS_ELERIUM_COST = 50
 
 ;Since we're making it in-house, it's probably better to add a whitelist for permament resistance orders instead of the other way around
-;;+PERMAMENT_RESISTANCE_ORDERS=placeholder
++PERMAMENT_RESISTANCE_ORDERS=ResCard_RadioFreeLily_LW
++PERMAMENT_RESISTANCE_ORDERS=ResCard_IntegratedWarfare
++PERMAMENT_RESISTANCE_ORDERS=Rescard_ShadyScavengers_LW
++PERMAMENT_RESISTANCE_ORDERS=ResCard_LightningStrike
++PERMAMENT_RESISTANCE_ORDERS=ResCard_Vengeance
+
+
+
+
+;; Example usage of resistance order configs
+;; Magic Numbers should include snippet of text that describes what they represent.
+;; They are converted into string and integer tags of the same number.
+;; Note that this hasn't been implemented yet lol
+;; black market config structs are an array of black market configs.
+;; same with crackdown configs and sitrep configs.
+;; Priorities are ascending order (e.g. 2 is greater priority than 1), and the highest priority config for a card is the one that takes effect.
+; monthly field commander mission; rewards between [0] and [1] supplies.
+; +ResistanceCardFlexibleConfigs=(\\
+; 	ResCardName="ResCard_CouncilBounties",\\
+; 	 StringValue0="75",\\
+; 	 StringValue1="125",\\
+; 	 Priority=1)
+
+; +ResistanceCardFlexibleConfigs=(\\
+; 	ResCardName="ResCard_YouOweMe",\\
+; 	 StringValue0="40",\\
+; 	 StringValue1="-1",\\
+; 	 Priority=1,\\
+; 	RewardMods=(\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="Extract",\\
+; 			RewardApplied="Reward_Supplies",\\
+; 			RewardQuantity=40\\
+; 		),\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="SwarmDefense",\\
+; 			RewardApplied="Reward_Supplies",\\
+; 			RewardQuantity=40\\
+; 		)\\
+; 	)\\
+; )
+; +ResistanceCardFlexibleConfigs=(\\
+; 	ResCardName="ResCard_YouOweMe",\\
+; 	 StringValue0="40",\\
+; 	 StringValue1="-1",\\
+; 	 Priority=1,\\
+; 	RewardMods=(\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="Extract",\\
+; 			RewardApplied="Reward_Supplies",\\
+; 			RewardQuantity=40\\
+; 		),\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="SwarmDefense",\\
+; 			RewardApplied="Reward_Supplies",\\
+; 			RewardQuantity=40\\
+; 		)\\
+; 	)\\
+; )
+
+; ;;336 hours = 2 weeks
+; +ResistanceCardFlexibleConfigs=(\\
+; 	ResCardName="ResCard_IncitePowerVacuum",\\
+; 	 StringValue0="336",\\
+; 	 StringValue1="-1",\\
+; 	 Priority=1,\\
+; 	RewardMods=(\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="Neutralize",\\
+; 			RewardApplied="Reward_DoomReduction",\\
+; 			RewardQuantity=336\\
+; 		),\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="NeutralizeFieldCommander",\\
+; 			RewardApplied="Reward_DoomReduction",\\
+; 			RewardQuantity=336\\
+; 		)\\
+; 	)\\
+; )
+
+
+; +ResistanceCardFlexibleConfigs=(\\
+; 	ResCardName="ResCard_EducatedVandalism",\\
+; 	 StringValue0="15",\\
+; 	 StringValue1="-1",\\
+; 	 Priority=1,\\
+; 	RewardMods=(\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="DestroyObject",\\
+; 			RewardApplied="Reward_Alloys",\\
+; 			RewardQuantity=15\\
+; 		),\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="SabotageTransmitter",\\
+; 			RewardApplied="Reward_Alloys",\\
+; 			RewardQuantity=15\\
+; 		)\\
+; 	)\\
+; )
+
+; ;;336 hours = 2 weeks
+; +ResistanceCardFlexibleConfigs=(\\
+; 	ResCardName="ResCard_PowerCellRepurposing",\\
+; 	 StringValue0="15",\\
+; 	 StringValue1="2",\\
+; 	 Priority=1,\\
+; 	RewardMods=(\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="DestroyDevice",\\
+; 			RewardApplied="Reward_Elereum",\\
+; 			RewardQuantity=15\\
+; 		),\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="SecureUFO",\\
+; 			RewardApplied="Reward_AvengerPower",\\
+; 			RewardQuantity=2\\
+; 		),\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="SecureUFO",\\
+; 			RewardApplied="Reward_HeavyWeapon",\\
+; 			RewardQuantity=1\\
+; 		)\\
+; 	)\\
+; )
+
+; ; grants [0] extra intel on mission complete
+; +ResistanceCardFlexibleConfigs=(\\
+; 	ResCardName="ResCard_BureaucraticInfighting",\\
+; 	 StringValue0="30",\\
+; 	 StringValue1="",\\
+; 	 Priority=1,\\
+; 	RewardMods=(\\
+; 		(\\
+; 			ApplicableMissionFamilyIfAny="Recover",\\
+; 			RewardApplied="Reward_Intel",\\
+; 			RewardQuantity=30\\
+; 		)\\
+; 	)\\
+; )
+
+; ; grants 35 agility, 4 mobility till end of turn
+; +ResistanceCardFlexibleConfigs=(\\
+; 	ResCardName="ResCard_OdmGear",\\
+; 	 StringValue0="35",\\
+; 	 StringValue1="4",\\
+; 	 IntValue0=35,\\
+; 	 IntValue1=4,\\
+; 	 Priority=1\\
+; )
+
+
+
+; ; grants 20 hp, 2 shield
+; +ResistanceCardFlexibleConfigs=(\\
+; 	ResCardName="ResCard_SiphonLife",\\
+; 	 StringValue0="20",\\
+; 	 StringValue1="2",\\
+; 	 IntValue0=20,\\
+; 	 IntValue1=2,\\
+; 	 Priority=1\\
+; )
 
 
 [LW_Overhaul.X2Rescard_AdditionalResCards_LW]
@@ -2794,4 +2954,4 @@ bLeftSquadButton = false
 +AlienRulerTags = "Ruler_ArchonKingActive"
 
 [LW_Overhaul.X2StrategyElement_DefaultPointsOfInterests_LW]
-RESCARD_POI_MAX_CARDS_IN_HAND = 6
+RESCARD_POI_MAX_CARDS_IN_HAND = 9
