--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -431,6 +431,12 @@ HealAmount = 2
 MaxHealAmount = 4
 bApplyToBleedingOutUnits = false
 
+[LW_PerkPack_Integrated.X2Effect_LWReserveOverwatchPoints]
+
+; Abilities with higher priority will validated first
++OverwatchAbilities=(AbilityName="OverwatchShot", Priority=50)
++OverwatchAbilities=(AbilityName="PistolOverwatchShot", Priority=45)
+
 [LW_PerkPack_Integrated.X2AbilityCharges_Repair_LW]
 ; Repair
 T1_CHARGES = 1 ;Charges of Repair with conventional BIT
