--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -609,6 +609,8 @@ STILETTO_ARMOR_PIERCING = 3
 
 WATCHTHEMRUN_ACTIVATIONS_PER_TURN = 1
 
++WATCHTHEMRUN_TRIGGERS=ThrowGrenade
++WATCHTHEMRUN_TRIGGERS=LaunchGrenade
 +WATCHTHEMRUN_TRIGGERS=Fire_UBGL_Conv
 +WATCHTHEMRUN_TRIGGERS=Fire_UBGL_Mag
 +WATCHTHEMRUN_TRIGGERS=Fire_UBGL_Beam
