Add Long Watch shot to valid overwatch abilities

--- a/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
+++ b/LongWarOfTheChosen/Config/XComLW_SoldierSkills.ini
@@ -433,7 +433,8 @@ bApplyToBleedingOutUnits = false
 
 [LW_PerkPack_Integrated.X2Effect_LWReserveOverwatchPoints]
 
-; Abilities with higher priority will validated first
+; Abilities with higher priority will be validated first
++OverwatchAbilities=(AbilityName="LongWatchShot", Priority=55)
 +OverwatchAbilities=(AbilityName="OverwatchShot", Priority=50)
 +OverwatchAbilities=(AbilityName="PistolOverwatchShot", Priority=45)
 
