Fix watch them run passive icon + RFA on enemies

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -505,6 +505,7 @@ RULER_POD_SIZE_ALERT_THRESHOLDS[3]=999
 +PrimaryWeaponAbilities=TriggerBotShot
 +PrimaryWeaponAbilities=HitAndRun
 +PrimaryWeaponAbilities=ReadyForAnything
++PrimaryWeaponAbilities=ReadyForAnythingTrigger
 +PrimaryWeaponAbilities=ChosenVenomRounds
 +PrimaryWeaponAbilities=ChosenDragonRounds
 +PrimaryWeaponAbilities=ChosenBleedingRounds
