Remove Resistance Contacts from wilderness missions

--- a/LongWarOfTheChosen/Config/XComGameData.ini
+++ b/LongWarOfTheChosen/Config/XComGameData.ini
@@ -1536,6 +1536,9 @@ bExcludeFromStrategy=true
 
 ;DisplayEffects="PerfectVisibilityEffect"
 
+[ResistanceContacts X2SitrepTemplate]
++ExcludePlotTypes=Wilderness
+
 [SlightlyLargeMap X2SitRepTemplate]
 bNegativeEffect=true
 bExcludeFromStrategy=true
