More options for explosive falloff
1. Add a struct that can hold info about abilities that modify environmental damage and falloff.
2. Add config for abilities that modify explosive falloff.

--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -1103,6 +1103,19 @@ CHAMELEON_VEST_DODGE_BONUS=5
 +ABILITIES_TO_DISABLE_GRENADE_COOLDOWN="ShadowGrenadier"
 +ABILITIES_TO_DISABLE_GRENADE_COOLDOWN="TotalCombat"
 
+; Abilities that modify the grenade falloff
+; +ExplosiveFalloffBonuses =  (AbilityName = "", \\
+; 	EnvDamageBonus = 0, \\
+; 	bDisableEnvFalloff = false, \\
+; 	bDisableUnitFalloff = false)
+
+; Hardcoded abilities:
+
+; +ExplosiveFalloffBonuses =  (AbilityName = "Sapper",              EnvDamageBonus = 5)
+; +ExplosiveFalloffBonuses =  (AbilityName = "CombatEngineer",      EnvDamageBonus = 8,     bDisableEnvFalloff = true)
+; +ExplosiveFalloffBonuses =  (AbilityName = "TandemWarheads",      bDisableUnitFalloff = true)
+; +ExplosiveFalloffBonuses =  (AbilityName = "TandemHEATWarheads",  bDisableUnitFalloff = true)
+
 SPIDER_GRAPPLE_COOLDOWN=5
 WRAITH_GRAPPLE_COOLDOWN=5
 RAPIDFIRE_COOLDOWN=1
