--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "X2CommunityPromotionScreen"]
 	path = X2CommunityPromotionScreen
 	url = https://github.com/X2CommunityCore/X2CommunityPromotionScreen
+[submodule ".scripts/X2ModBuildCommon"]
+	path = .scripts/X2ModBuildCommon
+	url = https://github.com/X2CommunityCore/X2ModBuildCommon
