Exclude chosen supply raid from gop pod jobs
this just syncs them with normal supply raids. may help with some convergence issues

--- a/LongWarOfTheChosen/Config/XComLW_PodManager.ini
+++ b/LongWarOfTheChosen/Config/XComLW_PodManager.ini
@@ -137,6 +137,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Guard, Jobs[1]=Intercept, Jobs[2]=Block, Jobs[3]=Flank \\
     )
 
@@ -152,6 +153,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Guard, Jobs[1]=Intercept, Jobs[2]=Block, Jobs[3]=Flank \\
     )
 
@@ -167,6 +169,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Defend \\
     )
 
@@ -182,6 +185,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Defend \\
 	)
 
@@ -197,6 +201,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Guard, Jobs[1]=Intercept, Jobs[2]=Block, Jobs[3]=Flank \\
     )
 
@@ -211,6 +216,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Guard, Jobs[1]=Intercept, Jobs[2]=Block, Jobs[3]=Flank \\
     )
 
@@ -226,6 +232,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Defend \\
     )
 
@@ -241,6 +248,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Defend \\
     )
 
@@ -255,6 +263,7 @@
 	ExcludedMissionFamilies[3]="GoldenPath2_LW", \\
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
     Jobs[0]=Guard, Jobs[1]=Intercept, Jobs[2]=Block, Jobs[3]=Flank \\
     )
@@ -270,6 +279,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Guard, Jobs[1]=Intercept, Jobs[2]=Block, Jobs[3]=Flank \\
     )
 
@@ -284,6 +294,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Guard, Jobs[1]=Intercept, Jobs[2]=Block, Jobs[3]=Flank \\
     )
 
@@ -298,6 +309,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Defend \\
     )
 
@@ -312,6 +324,7 @@
 	ExcludedMissionFamilies[4]="GoldenPath1_LW", \\
 	ExcludedMissionFamilies[5]="Sabotage_LW", \\
 	ExcludedMissionFamilies[6]="SupplyLineRaid_LW", \\
+    ExcludedMissionFamilies[7]="ChosenSupplyLineRaid_LW", \\
     Jobs[0]=Defend \\
     )
 
