Sanitize photobooth config, add those LWS classes that work out of the box

--- a/LongWarOfTheChosen/Config/XComContent.ini
+++ b/LongWarOfTheChosen/Config/XComContent.ini
@@ -207,29 +207,14 @@
 ; Contains all class filters! A soldier class may have multiple PhotoboothSoldierClassFilters lines.
 ; In this case, the first entry is considered the "primary" filter for purposes of randomly rolling
 ; class poses.
-+PhotoboothSoldierClassFilters=(SoldierClass="Grenadier", ClassFilter=ePAFT_Grenadier)
-+PhotoboothSoldierClassFilters=(SoldierClass="CentralOfficer", ClassFilter=ePAFT_Ranger)
-+PhotoboothSoldierClassFilters=(SoldierClass="NestCentral", ClassFilter=ePAFT_Ranger)
-+PhotoboothSoldierClassFilters=(SoldierClass="LadderCentral", ClassFilter=ePAFT_Ranger)
-+PhotoboothSoldierClassFilters=(SoldierClass="Ranger", ClassFilter=ePAFT_Ranger)
-+PhotoboothSoldierClassFilters=(SoldierClass="Sharpshooter", ClassFilter=ePAFT_Sharpshooter)
-+PhotoboothSoldierClassFilters=(SoldierClass="PsiOperative", ClassFilter=ePAFT_PsiOperative)
-+PhotoboothSoldierClassFilters=(SoldierClass="ChiefEngineer", ClassFilter=ePAFT_Specialist)
-+PhotoboothSoldierClassFilters=(SoldierClass="TLE_ChiefEngineer", ClassFilter=ePAFT_Specialist)
-+PhotoboothSoldierClassFilters=(SoldierClass="Specialist", ClassFilter=ePAFT_Specialist)
-+PhotoboothSoldierClassFilters=(SoldierClass="Skirmisher", ClassFilter=ePAFT_Skirmisher)
-+PhotoboothSoldierClassFilters=(SoldierClass="Templar", ClassFilter=ePAFT_Templar)
-+PhotoboothSoldierClassFilters=(SoldierClass="Reaper", ClassFilter=ePAFT_Reaper)
-
-; Soldier classes mentioned here cannot have poses with a ePAFT_SoldierRifle,
-; or poses marked bExcludeFromTemplar.
-+TemplarLikeSoldierClasses="Templar"
-
-
-; Character templates mentioned here will use the spark poses and have some
-; extra space for themselves.
-+SparkLikeCharacterTemplates="SparkSoldier"
-
+;+PhotoboothSoldierClassFilters=(SoldierClass="LWS_Assault", ClassFilter=ePAFT_Sharpshooter)
++PhotoboothSoldierClassFilters=(SoldierClass="LWS_Grenadier", ClassFilter=ePAFT_Grenadier)
+;+PhotoboothSoldierClassFilters=(SoldierClass="LWS_Gunner", ClassFilter=ePAFT_)
+;+PhotoboothSoldierClassFilters=(SoldierClass="LWS_Ranger", ClassFilter=ePAFT_)
+;+PhotoboothSoldierClassFilters=(SoldierClass="LWS_Sharpshooter", ClassFilter=ePAFT_)
++PhotoboothSoldierClassFilters=(SoldierClass="LWS_Shinobi", ClassFilter=ePAFT_Ranger)
++PhotoboothSoldierClassFilters=(SoldierClass="LWS_Specialist", ClassFilter=ePAFT_Specialist)
+;+PhotoboothSoldierClassFilters=(SoldierClass="LWS_Technical", ClassFilter=ePAFT_)
 
 [XComGame.CHHelpers]
 
