Additional modded perk compatiblity config from Zelfana
Nothing gamebreaking, but adds various supported stuff that probably should be, such as modded standard shots for RFA, etc.

--- a/LongWarOfTheChosen/Config/XComLW_AlienPack.ini
+++ b/LongWarOfTheChosen/Config/XComLW_AlienPack.ini
@@ -131,6 +131,72 @@ RFA_ACTIVATIONS_PER_TURN = 1
 ; The effect checks that the unit is out of AP, so this ability being used as the last action should trigger RFA.
 +RFA_VALID_ABILITIES="StandardShot_NoEnd"
 
+; Zelfana compatibility list
++RFA_VALID_ABILITIES="AnimaGate"
++RFA_VALID_ABILITIES="Blaster"
++RFA_VALID_ABILITIES="BlasterDuringCannon"
++RFA_VALID_ABILITIES="Lucu_Sniper_SniperRifleShot"
++RFA_VALID_ABILITIES="ShadowFireRS"
++RFA_VALID_ABILITIES="ShadowFireNonSniperRS"
++RFA_VALID_ABILITIES="BulletSwarmRS"
++RFA_VALID_ABILITIES="BulletSwarmRS2"
++RFA_VALID_ABILITIES="SnapShotRS"
++RFA_VALID_ABILITIES="EMG_SnapShot"
++RFA_VALID_ABILITIES="LW2WotC_SnapShot"
++RFA_VALID_ABILITIES="StandardGhostShot"
++RFA_VALID_ABILITIES="RTStandardSniperShot"
++RFA_VALID_ABILITIES="ShadowOps_SnapShotShot"
++RFA_VALID_ABILITIES="ShadowOps_Reposition"
++RFA_VALID_ABILITIES="ShadowOps_ReadyForAnything"
++RFA_VALID_ABILITIES="StabilizedShotM1"
++RFA_VALID_ABILITIES="StabilizedShotM2"
++RFA_VALID_ABILITIES="StabilizedShotM3"
++RFA_VALID_ABILITIES="SnapShot"
++RFA_VALID_ABILITIES="MZSnapRuneshot"
++RFA_VALID_ABILITIES="RelocationShot"
++RFA_VALID_ABILITIES="PenaltyShot"
++RFA_VALID_ABILITIES="BD_LightEmUp_LW"
++RFA_VALID_ABILITIES="shivstandardshot"
++RFA_VALID_ABILITIES="GlaiveShot"
++RFA_VALID_ABILITIES="DualGlaiveShot"
++RFA_VALID_ABILITIES="DPTT_MilitiaStandardShot"
++RFA_VALID_ABILITIES="Exv_StandardShot"
++RFA_VALID_ABILITIES="Spectrum_Reposition"
++RFA_VALID_ABILITIES="SnapShotAL"
++RFA_VALID_ABILITIES="ABBSnapShot"
++RFA_VALID_ABILITIES="StrafingShot"
++RFA_VALID_ABILITIES="RM_SniperStandardFire_NoEnd"
++RFA_VALID_ABILITIES="WOTC_APA_Snapshot"
++RFA_VALID_ABILITIES="PA_Blaster"
++RFA_VALID_ABILITIES="PA_BlasterDuringCannon"
++RFA_VALID_ABILITIES="ISForcePushShot"
++RFA_VALID_ABILITIES="CloudSweeperShot"
++RFA_VALID_ABILITIES="ReaverShot"
++RFA_VALID_ABILITIES="LWDroneShock"
++RFA_VALID_ABILITIES="BU_ATST_SingleActionShot"
++RFA_VALID_ABILITIES="VCP_FireLightning"
++RFA_VALID_ABILITIES="VCP_FirePush"
+
+; Can hit multiple targets but are the standard shots for their respective guns or replace a standard shot
++RFA_VALID_ABILITIES="ARFMTeslaTrooperShot"
++RFA_VALID_ABILITIES="ARFMTalKhazanShotTargeted"
++RFA_VALID_ABILITIES="AHWTalKhazanShotAlien"
++RFA_VALID_ABILITIES="AHWCoringBeam"
++RFA_VALID_ABILITIES="AHWHeavyMechtoidStandardShot"
++RFA_VALID_ABILITIES="ARFMStandardShot_Explosive"
+
+; Secondary standard shots (but can be primary with Primary Secondaries)
++RFA_VALID_ABILITIES="PM_Shot_All"
++RFA_VALID_ABILITIES="WOTC_APA_Gunslinger_PistolShot"
++RFA_VALID_ABILITIES="IRI_BH_FirePistol"
++RFA_VALID_ABILITIES="IRI_Duke_FirePistol"
++RFA_VALID_ABILITIES="PurifierPistolStandardShot"
++RFA_VALID_ABILITIES="MrCPistolStandardShot"
++RFA_VALID_ABILITIES="ISForcePushPistolShot"
++RFA_VALID_ABILITIES="AHWBigIronShot"
++RFA_VALID_ABILITIES="PistolStandardShot_MPP"
++RFA_VALID_ABILITIES="VCP_FireShock"
+
 [LW_AlienPack_Integrated.UIScreenListener_Shell_LWAlienPack]
 
 ; Modders can override the moveorder priorities set in AIJobs.ini without risking mod conflicts. These are the same as set in DefaultAIJobs. Format:
