--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2328,6 +2328,14 @@ CHOSEN_REGENERATION_HEAL_VALUE_PCT=0.16f
 +PISTOL_ABILITY_WEAPON_CATS="pistol"
 +PISTOL_ABILITY_WEAPON_CATS="sidearm"
 
+; Compatibility config from Zelfana:
++PISTOL_ABILITY_WEAPON_CATS=BU_FrostDroid_pistol
++PISTOL_ABILITY_WEAPON_CATS=iri_handcannon
++PISTOL_ABILITY_WEAPON_CATS=kpp_autopulser
++PISTOL_ABILITY_WEAPON_CATS=fbchoswep6
++PISTOL_ABILITY_WEAPON_CATS=psionic_secondary
+
+
 ; Uses gameplay visibility on multi-shot abilities to fix performance
 ; issues with them on maps with large numbers of enemies. Downside is
 ; that follow up shots may not fire if previous shots destroy cover that
@@ -2346,6 +2354,42 @@ CHOSEN_REGENERATION_HEAL_VALUE_PCT=0.16f
 +MELEE_ABILITIES_FOR_BLOODTHIRST="SwordSlice_LW"
 +MELEE_ABILITIES_FOR_BLOODTHIRST="CombativesCounterattack"
 +MELEE_ABILITIES_FOR_BLOODTHIRST="LightningSlash_LW"
+
+; Compatibility config from Zelfana/AWierdGuy
++MELEE_ABILITIES_FOR_BLOODTHIRST="SwordSlice"
+
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZShockKnife"
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZFrostKnife"
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZFlameKnife"
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZSerratedKnife"
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZLightningKnife"
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZShieldCharge"
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZEnGardeAttack"
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZPowerCrush"
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZFinishingStroke"
+; Burial Blade is obviously strong but I think it's more good synergy rather than broken, you need 3 stacks of blood thirst just to match the min damage of fusion blade
++MELEE_ABILITIES_FOR_BLOODTHIRST="MZBurialBlade"
+
++MELEE_ABILITIES_FOR_BLOODTHIRST="IRI_Rider_Haymaker"
+
++MELEE_ABILITIES_FOR_BLOODTHIRST="DisarmingStrike"
++MELEE_ABILITIES_FOR_BLOODTHIRST="Lacerate"
++MELEE_ABILITIES_FOR_BLOODTHIRST="Shadowmelt"
++MELEE_ABILITIES_FOR_BLOODTHIRST="SlashAndDashRS"
++MELEE_ABILITIES_FOR_BLOODTHIRST="ShadowOps_SliceAndDice"
+
++MELEE_ABILITIES_FOR_BLOODTHIRST="WardensAdvance"
++MELEE_ABILITIES_FOR_BLOODTHIRST="WardenHalfSword"
++MELEE_ABILITIES_FOR_BLOODTHIRST="WardenWinding"
+
++MELEE_ABILITIES_FOR_BLOODTHIRST="F_ShieldTrauma"
++MELEE_ABILITIES_FOR_BLOODTHIRST="ShieldBash"
+
+; By the time you have a katana, executing <4 hp enemies is pretty rare, I don't think leaving this is a problem
++MELEE_ABILITIES_FOR_BLOODTHIRST="TakeUnder"
+
+; This is Buccaneers only reliable way of using their melee, even if it's free
++MELEE_ABILITIES_FOR_BLOODTHIRST="ScourgeCutter"
 
 [LW_Overhaul.X2LWCovertActionsModTemplate]
 ; Required soldier ranks to go on the "Find Faction" covert actions
