Fix faceless recruit chance calc
* Expose the Haven Infiltrators dark event value to config
* Redo the formula so that it is properly clamped, and scales better.  There are still diminishing returns, but not as harsh as kirukas.
* Fix the bug where a soldier with no faceless reduction abilities would result in a higher faceless recruitment chance than not having any advisor at all.

--- a/LongWarOfTheChosen/Config/XComLW_Outposts.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Outposts.ini
@@ -7,6 +7,7 @@
 DEFAULT_REBEL_JOB="Hiding"
 DEFAULT_OUTPOST_MAX_SIZE=13		; Initial maximum number of rebels in an outpost who can have jobs
 DEFAULT_FACELESS_CHANCE=0.16f	; Initial chance [0.0 = never, 1.0 = always] of a new rebel being faceless
+HAVEN_INFILTRATORS_MULTIPLIER = 2.0f ; Modifier for Haven Infiltrators dark event
 FACELESS_CHANCE_MULTIPLIER=0.6f ; Certain abilities reduce faceless chance by this base amount (but with diminishing returns)
 FACELESS_CHANCE_MULTIPLIER_LIMIT=0.3f ; Lowest possible value for multiplier
 MAX_FACELESS_PROPORTION=0.32f	; Faceless typically won't generate if they are more than this proportion of a Haven's population
