Add a bonus to detecting Rendezvous missions for equipment/abilities
uses the same list as the recruit chance reduction.

Current value set to 10% multiplicative, but all counts are added first, so 2 abilities = 1.2x multiplier, not 1.1 x 1.1.

--- a/LongWarOfTheChosen/Config/XComLW_Activities.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Activities.ini
@@ -946,6 +946,7 @@ INVASION_MIN_ALERT_TO_LAUNCH=8
 +LIAISON_MISSION_INCOME_BONUS_PER_RANK_OFFICER[6]=14.0
 +LIAISON_MISSION_INCOME_BONUS_PER_RANK_OFFICER[7]=15.0
 
+REDUCTION_ABILITIES_BONUS_MULTI=0.1
 ;------------------------------------------------------------------
 ;------------------ ACTIVITY TEMPLATES ----------------------------
 ;------------------------------------------------------------------
