Add image for Recruit Rebels covert op

--- a/LongWarOfTheChosen/Config/XComGameBoard.ini
+++ b/LongWarOfTheChosen/Config/XComGameBoard.ini
@@ -916,3 +916,15 @@ ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Facility_Lead"
 [CovertActionNarrative_FindAdventDetachment_Templars X2CovertActionNarrativeTemplate]
 AssociatedFaction="Faction_Templars"
 ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Facility_Lead"
+
+[CovertActionNarrative_RecruitRebels_Skirmishers X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Skirmishers"
+ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Increase_Supply_Income_by_X"
+
+[CovertActionNarrative_RecruitRebels_Reapers X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Reapers"
+ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Increase_Supply_Income_by_X"
+
+[CovertActionNarrative_RecruitRebels_Templars X2CovertActionNarrativeTemplate]
+AssociatedFaction="Faction_Templars"
+ActionImage = "img:///UILibrary_XPACK_StrategyImages.CovertOp_Increase_Supply_Income_by_X"
