--- a/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
+++ b/LongWarOfTheChosen/Config/XComLW_Overhaul.ini
@@ -2668,6 +2668,10 @@ fSPARK_HP_MIN = 0.5f
 +RETALIATION_MISSION_TYPES=RecruitRaid_LW
 +RETALIATION_MISSION_TYPES=SupplyConvoy_LW
 
++RESCUE_REBAL_RETAL_TYPES=Defend_LW
++RESCUE_REBAL_RETAL_TYPES=Terror_LW
++RESCUE_REBAL_RETAL_TYPES=Invasion_LW
+
 ; Override enemy counts based on mission name:
 
 +OverrideMissionEnemyCounts=(MissionName="ST_RouteStart_M1S1", NumEnemies = 82)
